[package]
name = "pfctl"
version = "0.4.6"
authors = ["Mullvad VPN"]
license = "MIT/Apache-2.0"
description = "Library for interfacing with the Packet Filter (PF) firewall on macOS"
repository = "https://github.com/mullvad/pfctl-rs"
readme = "README.md"
keywords = ["pf", "firewall", "macos", "packet", "filter"]
categories = ["network-programming", "os", "os::macos-apis", "api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "mullvad/pfctl-rs" }

[dependencies]
derive_builder = "0.9"
errno = "0.2"
ioctl-sys = "0.6.0"
ipnetwork = "0.16"
libc = "0.2.29"
thiserror = "1"

[dev-dependencies]
assert_matches = "1.1.0"
error-chain = "0.12"
scopeguard = "1.0"
uuid = { version = "0.8", features = ["v4"] }
