[package]
name = "pfctl"
version = "0.6.1"
authors = ["Mullvad VPN"]
license = "MIT/Apache-2.0"
description = "Library for interfacing with the Packet Filter (PF) firewall on macOS"
repository = "https://github.com/mullvad/pfctl-rs"
readme = "README.md"
keywords = ["pf", "firewall", "macos", "packet", "filter"]
categories = ["network-programming", "os", "os::macos-apis", "api-bindings"]
edition = "2021"
rust-version = "1.70.0"

[badges]
travis-ci = { repository = "mullvad/pfctl-rs" }


[dependencies]
ioctl-sys = "0.8.0"
libc = "0.2.29"
derive_builder = "0.20"
ipnetwork = "0.20.0"

[dev-dependencies]
assert_matches = "1.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
scopeguard = "1.0"
